--- a/compgeom.bib
+++ b/compgeom.bib
@@ -2,12 +2,39 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-11-26 15:18:58 -0600 
+%% Created for Jeff Erickson at 2023-03-15 18:50:38 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kkk-tgrfw-83,
+	author = {Kahn, Jeff and Klawe, Maria M. and Kleitman, Daniel},
+	date-added = {2023-03-15 17:38:23 -0500},
+	date-modified = {2023-03-15 17:41:49 -0500},
+	doi = {doi.org/10.1137/060402},
+	journal = {SIAM J. Algebraic Discrete Methods},
+	number = {2},
+	pages = {194--206},
+	title = {Traditional galleries require fewer watchmen},
+	update = {96.09 agarwal, 94.05 devillers},
+	volume = {4},
+	year = {1983},
+	bdsk-url-1 = {https://doi.org/10.1137/060402}}
+
+@article{ll-ccagp-86,
+	author = {Lee, Der-Tsai and Lin, Arthur K.},
+	date-added = {2023-03-15 17:34:12 -0500},
+	date-modified = {2023-03-15 17:35:28 -0500},
+	doi = {10.1109/TIT.1986.1057165},
+	journal = {IEEE Trans. Inform. Theory},
+	number = {2},
+	pages = {276--282},
+	title = {Computational complexity of art gallery problems},
+	volume = {32},
+	year = {1986},
+	bdsk-url-1 = {https://doi.org/10.1109/TIT.1986.1057165}}
 
 @article{ks-tbcds-02,
 	author = {Keil, Mark and Snoeyink, Jack},
@@ -1316,9 +1343,10 @@
 	year = {1984}}
 
 @article{fm-tspep-84,
-	author = {Fournier, Alain and Montuno, D. Y.},
+	author = {Fournier, Alain and Montuno, Delfin Y.},
 	date-added = {2011-10-24 06:46:04 +0000},
-	date-modified = {2013-02-08 20:51:50 +0000},
+	date-modified = {2023-03-15 18:50:38 -0500},
+	doi = {10.1145/357337.357341},
 	journal = {ACM Trans. Graph.},
 	keywords = {triangulation, trapezoidal decomposition},
 	number = {2},
@@ -1326,7 +1354,8 @@
 	read = {1},
 	title = {Triangulating simple polygons and equivalent problems},
 	volume = {3},
-	year = {1984}}
+	year = {1984},
+	bdsk-url-1 = {https://doi.org/10.1145/357337.357341}}
 
 @article{egs-laggw-10,
 	arxiv = {0812.0893},
@@ -1569,14 +1598,16 @@
 @article{s-sfira-91,
 	author = {Seidel, Raimund},
 	date-added = {2009-08-26 17:43:39 -0500},
-	date-modified = {2013-02-08 20:51:23 +0000},
+	date-modified = {2023-03-15 18:04:27 -0500},
+	doi = {10.1016/0925-7721(91)90012-4},
 	journal = {Comput. Geom. Theory Appl.},
 	number = {1},
 	pages = {51--64},
 	read = {1},
 	title = {A simple and fast incremental randomized algorithm for computing trapezoidal decompositions and for triangulating polygons},
 	volume = {1},
-	year = {1991}}
+	year = {1991},
+	bdsk-url-1 = {https://doi.org/10.1016/0925-7721(91)90012-4}}
 
 @article{c-tsplt-91,
 	author = {Chazelle, Bernard},
@@ -1595,10 +1626,12 @@
 @article{agr-lttsp-01,
 	author = {Amato, Nancy M. and Goodrich, Michael T. and Ramos, Edgar},
 	date-added = {2009-08-26 17:39:26 -0500},
-	date-modified = {2013-02-08 20:53:21 +0000},
+	date-modified = {2023-03-15 18:03:34 -0500},
+	doi = {10.1007/s00454-001-0027-x},
 	journal = {Discrete Comput. Geom.},
 	pages = {245--265},
 	read = {1},
 	title = {A Randomized Algorithm for Triangulating a Simple Polygon in Linear Time},
 	volume = {26},
-	year = {2001}}
+	year = {2001},
+	bdsk-url-1 = {https://doi.org/10.1007/s00454-001-0027-x}}
