--- a/optimization.bib
+++ b/optimization.bib
@@ -2,12 +2,42 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2023-03-01 10:18:44 -0600 
+%% Created for Jeff Erickson at 2023-03-28 16:59:43 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{jo-rnfns-09,
+	abstract = {This paper was edited by Sigismund Cohn, C. W. Borchardt and A. Clebsch from posthumous manuscripts of C. G. J. Jacobi. The solution of the following problem: ``to transform a square table of m2 numbers by adding minimal numbers ℓito each horizontal row, in such a way that it possess m transversal maxima'', determines the order and the shortest normal form reduction of the system: the equations ui= 0 must be respectively differentiated ℓitimes. One also determines the number of differentiations of each equation of the given system needed to produce the differential equations necessary to reduce the proposed system to a single equation.},
+	author = {Jacobi, Carl Gustav Jacob and Ollivier (translator), Fran{\c c}ois},
+	date-added = {2023-03-11 15:07:06 -0600},
+	date-modified = {2023-03-11 15:12:47 -0600},
+	doi = {10.1007/s00200-009-0088-2},
+	journal = {Appl. Algebra Eng. Commun. Comput.},
+	note = {Engish translation of \cite{j-adsnf-1890}},
+	number = {1},
+	pages = {33--64},
+	title = {The reduction to normal form of a non-normal system of differential equations},
+	volume = {20},
+	year = {2009},
+	bdsk-url-1 = {https://doi.org/10.1007/s00200-009-0088-2}}
+
+@article{10.1093/imamat/7.3.273,
+	abstract = {{Problems involving the determination of routes on networks arise in many different contexts. For example network flow problems in operations research, such as transportation and assignment problems, involve the determination of a succession of shortest or least-cost paths between commodity sources and sinks. Again, critical path analysis and certain scheduling problems involve the determination of longest paths on activity networks. Pathfinding problems of different kinds also arise in the design of logic networks, and in routing messages through congested communication networks. This paper presents an algebraic structure for the formulation and solution of such problems.After defining the algebraic structure and giving concrete examples applicable to different kinds of routing problems, we use it in a general analysis of a class of directed networks, in which each are has an associated measure (representing for instance a transportation cost, an activity duration, the state (open or closed) of a switch, or the probability of a communication link being available). It is then shown that all the routing problems mentioned above can be expressed in the same algebraic form, and that they can all be solved by variants of classical methods of linear algebra, differing from these only in the significance of the additive and multiplicative operations.}},
+	author = {Carr{\'e}, Bernard A.},
+	date-added = {2023-03-11 13:38:21 -0600},
+	date-modified = {2023-03-11 13:39:22 -0600},
+	doi = {10.1093/imamat/7.3.273},
+	journal = {IMA J. Appl. Math.},
+	keywords = {min-plus algebra, shortest paths and flows via funny matrix stuff},
+	number = {3},
+	pages = {273--294},
+	title = {An Algebra for Network Routing Problems},
+	volume = {7},
+	year = {1971},
+	bdsk-url-1 = {https://doi.org/10.1093/imamat/7.3.273}}
 
 @article{flspw-fppcg-18,
 	arxiv = {1511.01379},
@@ -758,16 +788,18 @@
 	year = {2012}}
 
 @article{akmsw-gamsa-87,
-	author = {Aggarwal, Alok and Klawe, Maria M. and Moran, Shlomo and Shor, Peter and Wilber, Rober},
+	author = {Aggarwal, Alok and Klawe, Maria M. and Moran, Shlomo and Shor, Peter and Wilber, Robert},
 	date-added = {2013-10-30 15:40:16 +0000},
-	date-modified = {2013-10-30 15:41:30 +0000},
+	date-modified = {2023-03-10 16:02:38 -0600},
+	doi = {10.1007/BF01840359},
 	journal = {Algorithmica},
 	keywords = {SMAWK},
 	number = {1--4},
 	pages = {195--208},
 	title = {Geometric applications of a matrix-searching algorithm},
 	volume = {2},
-	year = {1987}}
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1007/BF01840359}}
 
 @inproceedings{akmsw-gamsa-86,
 	author = {Aggarwal, Alok and Klawe, Maria and Moran, Shlomo and Shor, Peter W. and Wilber, Robert},
@@ -933,10 +965,12 @@
 	author = {Alon, Noga and Yuster, Raphael},
 	booktitle = {Proc. 51st IEEE Symp. Found. Comput. Sci.},
 	date-added = {2013-10-29 03:26:48 +0000},
-	date-modified = {2013-10-29 03:28:09 +0000},
+	date-modified = {2023-03-12 16:09:34 -0500},
+	doi = {10.1109/FOCS.2010.28},
 	pages = {225--234},
 	title = {Solving linear systems through nested dissection},
-	year = {2010}}
+	year = {2010},
+	bdsk-url-1 = {https://doi.org/10.1109/FOCS.2010.28}}
 
 @inproceedings{ms-mmpgg-04,
 	author = {Mucha, Marcin and Sankowski, Piotr},
@@ -1254,13 +1288,15 @@
 	author = {Tomizawa, Nobuaki},
 	comments = {reweighting successive shortest paths},
 	date-added = {2013-07-05 09:36:37 +0000},
-	date-modified = {2015-04-22 14:04:07 +0000},
+	date-modified = {2023-03-10 15:57:33 -0600},
+	doi = {10.1002/net.3230010206},
 	journal = {Networks},
 	pages = {173--194},
 	read = {1},
 	title = {On some techniques useful for solution of transportation network problems},
 	volume = {1},
-	year = {1971}}
+	year = {1971},
+	bdsk-url-1 = {https://doi.org/10.1002/net.3230010206}}
 
 @article{s-htmfp-02,
 	author = {Schrijver, Alexander},
@@ -1508,8 +1544,9 @@
 	booktitle = {C. G. J. Jacobi's gesammelte Werke, f{\"u}nfter Band},
 	comments = {First description of the Hungarian algorithm, rediscovered by Kuhn},
 	date-added = {2013-06-28 14:55:53 +0000},
-	date-modified = {2013-06-28 15:18:16 +0000},
+	date-modified = {2023-03-11 15:13:19 -0600},
 	editor = {Weierstrass, Karl},
+	note = {English translation in \cite{jo-rnfns-09}},
 	pages = {485--513},
 	publisher = {Bruck und Verlag von Georg Reimer},
 	title = {De aequationum differentialum systemate non normali ad formam normalem revocando ({Ex Ill.} {C. G. J. Jacobi} manuscriptis posthumis in medium protulit {A. Clebsch})},
@@ -1542,13 +1579,15 @@
 	author = {Mehlhorn, Kurt and Schmidt, Bernd H.},
 	booktitle = {Proc. 4th Int. Conf. Foundations of Computation Theory},
 	date-added = {2013-06-27 15:54:11 +0000},
-	date-modified = {2013-06-27 15:57:45 +0000},
+	date-modified = {2023-03-13 04:44:55 -0500},
+	doi = {10.1007/3-540-12689-9_113},
 	number = {158},
 	pages = {302--309},
 	publisher = {Springer},
 	series = {Lecture Notes Comput. Sci.},
 	title = {A Single Shortest Path Algorithm for Graphs with Separators},
-	year = {1983}}
+	year = {1983},
+	bdsk-url-1 = {https://doi.org/10.1007/3-540-12689-9_113}}
 
 @inproceedings{ek-lafms-13,
 	author = {Eisenstat, David and Klein, Philip N.},
@@ -1677,22 +1716,28 @@
 @article{ek-tiaen-72,
 	author = {Edmonds, Jack and Karp, Richard M.},
 	date-added = {2013-06-02 16:05:49 +0000},
-	date-modified = {2013-06-02 16:06:46 +0000},
+	date-modified = {2023-03-10 15:58:51 -0600},
+	doi = {10.1145/321694.321699},
 	journal = {J. Assoc. Comput. Mach.},
 	number = {2},
 	pages = {248--264},
 	read = {1},
 	title = {Theoretical improvements in algorithmic efficiency of network flow problems},
 	volume = {19},
-	year = {1972}}
+	year = {1972},
+	bdsk-url-1 = {https://doi.org/10.1145/321694.321699}}
 
 @book{ff-fn-62,
 	author = {Ford, Lester R. and Fulkerson, Delbert R.},
+	comments = {https://www.rand.org/pubs/reports/R375.html},
 	date-added = {2013-06-02 16:03:36 +0000},
-	date-modified = {2013-06-02 16:04:20 +0000},
+	date-modified = {2023-03-26 15:02:09 -0500},
+	note = {First published as Report R-375-PR, The RAND Corporation, Santa Monica, California, August 1962.},
 	publisher = {Princeton University Press},
 	title = {Flows in Networks},
-	year = {1962}}
+	url = {https://www.jstor.org/stable/j.ctt183q0b4},
+	year = {1962},
+	bdsk-url-1 = {https://www.jstor.org/stable/j.ctt183q0b4}}
 
 @article{kn-fpgvc-94,
 	author = {Khuller, Samir and Naor, Joseph (Seffi)},
@@ -1927,36 +1972,40 @@
 @article{g-psppt-95,
 	author = {Goodrich, Michael T.},
 	date-added = {2011-09-01 08:40:21 +0000},
-	date-modified = {2011-09-01 08:40:53 +0000},
+	date-modified = {2023-03-10 07:17:19 -0600},
+	doi = {10.1006/jcss.1995.1076},
 	journal = {J. Comput. Syst. Sci.},
 	number = {3},
 	pages = {374--389},
 	title = {Planar Separators and Parallel Polygon Triangulation},
 	volume = {51},
 	year = {1995},
-	bdsk-url-1 = {http://www.sciencedirect.com/science/article/pii/S0022000085710768},
-	bdsk-url-2 = {http://dx.doi.org/10.1006/jcss.1995.1076}}
+	bdsk-url-1 = {https://doi.org/10.1006/jcss.1995.1076}}
 
 @inproceedings{g-psppt-92,
 	author = {Goodrich, Michael T.},
 	booktitle = {Proc. 24th Ann. ACM Symp. Theory of Computing},
 	date-added = {2011-09-01 08:38:08 +0000},
-	date-modified = {2011-09-01 08:39:13 +0000},
+	date-modified = {2023-03-10 07:17:58 -0600},
+	doi = {10.1145/129712.129762},
 	pages = {507--516},
 	title = {Planar separators and parallel polygon triangulation (preliminary version)},
-	year = {1992}}
+	year = {1992},
+	bdsk-url-1 = {https://doi.org/10.1145/129712.129762}}
 
 @article{kk-altag-90,
 	author = {Klawe, Maria M. and Kleitman, Daniel J.},
 	date-added = {2011-08-26 19:05:33 +0000},
-	date-modified = {2013-10-30 15:36:28 +0000},
+	date-modified = {2023-03-10 16:03:33 -0600},
+	doi = {10.1137/0403009},
 	journal = {SIAM J. Discrete Math.},
 	number = {1},
 	pages = {81--97},
 	read = {1},
 	title = {An almost linear time algorithm for generalized matrix searching},
 	volume = {3},
-	year = {1990}}
+	year = {1990},
+	bdsk-url-1 = {https://doi.org/10.1137/0403009}}
 
 @article{bkm-asstp-09,
 	author = {Borradaile, Glencora and Klein, Philip and Mathieu, Claire},
@@ -2033,18 +2082,20 @@
 	year = {1986}}
 
 @inproceedings{ls-mcsc-11,
+	arxiv = {1104.4890},
 	author = {\L{}{\k a}cki, Jakub and Sankowski, Piotr},
 	booktitle = {Proc. 19th Ann. Europ. Symp. Algorithms},
 	date-added = {2011-08-05 13:06:12 -0500},
-	date-modified = {2017-11-03 21:14:23 +0000},
-	editor = {Demetrescu, Camil and Halld{\'o}rsson, Magn{\'u}s M.},
+	date-modified = {2023-03-17 21:35:07 -0500},
+	doi = {10.1007/978-3-642-23719-5_14},
 	pages = {155--166},
 	publisher = {Springer},
 	read = {1},
 	series = {Lecture Notes Comput. Sci.},
 	title = {Min-cuts and Shortest Cycles in Planar Graphs in {$O(n \log \log n)$} Time},
 	volume = {6942},
-	year = {2011}}
+	year = {2011},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-642-23719-5_14}}
 
 @book{kt-ad-05,
 	author = {Kleinberg, Jon and Tardos, {\'E}va},
@@ -2671,12 +2722,14 @@
 @article{knk-lsfpg-93,
 	author = {Khuller, Samir and Naor, Joseph and Klein, Philip},
 	date-added = {2009-07-01 01:52:06 -0500},
-	date-modified = {2013-07-22 16:19:11 +0000},
+	date-modified = {2023-03-26 18:32:31 -0500},
+	doi = {10.1137/0406038},
 	journal = {SIAM J. Discrete Math.},
 	pages = {477--490},
 	read = {1},
 	title = {The lattice structure of flow in planar graphs},
-	year = {1993}}
+	year = {1993},
+	bdsk-url-1 = {https://doi.org/10.1137/0406038}}
 
 @article{ggt-udtns-91,
 	author = {Goldberg, Andrew V. and Grigoriadis, Michael D. and Tarjan, Robert E.},
@@ -2770,13 +2823,15 @@
 @article{j-easps-77,
 	author = {Johnson, Donald B.},
 	date-added = {2009-06-30 01:02:43 -0500},
-	date-modified = {2009-06-30 01:03:41 -0500},
+	date-modified = {2023-03-10 16:00:05 -0600},
+	doi = {10.1145/321992.321993},
 	journal = {J. Assoc. Comput. Mach.},
 	number = {1},
 	pages = {1--13},
 	title = {Efficient algorithms for shortest paths in sparse networks},
 	volume = {24},
-	year = {1977}}
+	year = {1977},
+	bdsk-url-1 = {https://doi.org/10.1145/321992.321993}}
 
 @techreport{f-nft-56,
 	author = {Ford, Lester R.},
@@ -2953,15 +3008,18 @@
 	annote = {Minimum (s,t)-cut in a directed planar graph in O(n log^2 n / log log n) time on a word RAM, or O(n log^2 n) time on a real RAM; generalizes Reif's algorithm to directed planar graphs.},
 	author = {Janiga, Ladislav and Koubek, V{\'a}clav},
 	comment = {Error discovered by Yahav Nussbaum \cite{n-pc-10}},
+	comments = {No DOI},
 	date-added = {2008-11-25 11:51:41 -0600},
-	date-modified = {2013-07-22 16:16:56 +0000},
+	date-modified = {2023-03-17 14:48:27 -0500},
 	journal = {Kybernetika},
 	number = {1},
 	pages = {37--49},
 	read = {1},
 	title = {Minimum cut in directed planar networks},
+	url = {https://www.kybernetika.cz/content/1992/1/37/},
 	volume = {28},
-	year = {1992}}
+	year = {1992},
+	bdsk-url-1 = {https://www.kybernetika.cz/content/1992/1/37/}}
 
 @article{mvv-memi-87,
 	author = {Mulmuley, Ketan and Vazirani, Umesh and Vazirani, Vijay},
@@ -2972,7 +3030,8 @@
 	pages = {105--113},
 	title = {Matching is as easy as matrix inversion},
 	volume = {7},
-	year = {1987}}
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1007/BF02579206}}
 
 @incollection{jp-cctsp-85,
 	address = {New York},
@@ -3071,12 +3130,13 @@
 @phdthesis{v-anf-83,
 	author = {Venkatesan, Shankar M.},
 	date-added = {2008-11-16 21:50:35 -0600},
-	date-modified = {2008-11-17 15:39:25 -0600},
-	note = {Cited in \cite{jv-ppfn-83}},
+	date-modified = {2023-03-26 19:31:22 -0500},
 	school = {The Pennsylvania State University},
 	title = {Algorithms for network flows},
 	type = {{Ph.D.} thesis},
-	year = {1983}}
+	url = {https://www.proquest.com/docview/303173800},
+	year = {1983},
+	bdsk-url-1 = {https://www.proquest.com/docview/303173800}}
 
 @inproceedings{jv-ppfn-83,
 	author = {Johnson, Donald B. and Venkatesan, Shankar M.},
@@ -3286,14 +3346,16 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{w-edstp-97,
 	author = {Weihe, Karsten},
 	date-added = {2008-10-14 08:28:43 -0500},
-	date-modified = {2013-10-27 22:47:21 +0000},
+	date-modified = {2023-03-17 14:40:43 -0500},
+	doi = {10.1006/jagm.1996.0831},
 	journal = {J. Algorithms},
 	number = {1},
 	pages = {121-138},
 	read = {1},
 	title = {Edge-disjoint $(s,t)$-paths in undirected planar graphs in linear time},
 	volume = {23},
-	year = {1997}}
+	year = {1997},
+	bdsk-url-1 = {https://doi.org/10.1006/jagm.1996.0831}}
 
 @inproceedings{hw-mstfkc-07,
 	author = {Hochstein, Jan M. and Weihe, Karsten},
@@ -3329,17 +3391,19 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	volume = {IT-2},
 	year = {1956}}
 
-@article{ff-mfn-56,
+@article{ff-mftn-56,
 	author = {Ford, Lester R. and Fulkerson, Delbert R.},
 	date-added = {2008-10-13 23:56:31 -0500},
-	date-modified = {2013-07-10 16:14:58 +0000},
+	date-modified = {2023-03-26 14:49:52 -0500},
+	doi = {10.4153/CJM-1956-045-5},
 	journal = {Canad. J. Math.},
 	note = {First published as Research Memorandum RM-1400, The RAND Corporation, Santa Monica, California, November 19, 1954.},
-	number = {399--404},
+	pages = {399--404},
 	read = {1},
 	title = {Maximal flow through a network},
 	volume = {8},
-	year = {1956}}
+	year = {1956},
+	bdsk-url-1 = {https://doi.org/10.4153/CJM-1956-045-5}}
 
 @phdthesis{b-epnfc-08,
 	author = {Borradaile, Glencora},
@@ -3466,25 +3530,29 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{f-faspp-87,
 	author = {Frederickson, Greg N.},
 	date-added = {2008-08-01 13:54:43 -0500},
-	date-modified = {2008-08-01 13:54:53 -0500},
+	date-modified = {2023-03-09 07:18:49 -0600},
+	doi = {10.1137/0216064},
 	journal = {SIAM J. Comput.},
-	number = 6,
+	number = {8},
 	pages = {1004--1004},
 	title = {Fast algorithms for shortest paths in planar graphs with applications},
-	volume = 16,
-	year = 1987}
+	volume = {16},
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1137/0216064}}
 
-@article{hj-oamfu-85,
+@article{hj-oamfupn-85,
 	author = {Hassin, Refael and Johnson, Donald B.},
 	date-added = {2008-08-01 13:51:11 -0500},
-	date-modified = {2013-07-05 09:33:56 +0000},
+	date-modified = {2023-03-26 14:58:57 -0500},
+	doi = {10.1137/0214045},
 	journal = {SIAM J. Comput.},
 	number = {3},
 	pages = {612--624},
 	read = {1},
 	title = {An {$O(n\log^2 n)$} algorithm for maximum flow in undirected planar networks},
 	volume = {14},
-	year = {1985}}
+	year = {1985},
+	bdsk-url-1 = {https://doi.org/10.1137/0214045}}
 
 @article{is-mfpn-79,
 	author = {Itai, Alon and Shiloach, Yossi},
@@ -3578,14 +3646,16 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{fr-pgnwe-06,
 	author = {Fakcharoenphol, Jittat and Rao, Satish},
 	date-added = {2008-07-31 15:22:49 -0500},
-	date-modified = {2013-10-28 23:40:57 +0000},
+	date-modified = {2023-03-10 15:01:17 -0600},
+	doi = {10.1016/j.jcss.2005.05.007},
 	journal = {J. Comput. Syst. Sci.},
 	number = {5},
 	pages = {868--889},
 	read = {1},
 	title = {Planar graphs, negative weight edges, shortest paths, and near linear time},
 	volume = {72},
-	year = {2006}}
+	year = {2006},
+	bdsk-url-1 = {https://doi.org/10.1016/j.jcss.2005.05.007}}
 
 @article{glv-ovena-01,
 	author = {Galluccio, Anna and Loeb, Martin and Vondr{\'a}k, Jan},
@@ -3703,7 +3773,8 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{hkrs-fspap-97,
 	author = {Henzinger, Monika R. and Klein, Philip and Rao, Satish and Subramanian, Sairam},
 	date-added = {2008-07-19 10:18:31 -0500},
-	date-modified = {2013-10-16 20:37:30 +0000},
+	date-modified = {2023-03-11 14:59:58 -0600},
+	doi = {https://doi.org/10.1006/jcss.1997.1493},
 	journal = {J. Comput. Syst. Sci.},
 	number = {1},
 	pages = {3--23},
