--- a/teaching.bib
+++ b/teaching.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2023-02-28 22:18:28 -0600 
+%% Created for Jeff Erickson at 2023-04-26 15:30:28 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -517,11 +517,12 @@ This chapter discusses, improving the academic performance of college students w
 	author = {Xia, Jason and Zilles, Craig},
 	booktitle = {Proc. 54th ACM Technical Symposium on Computer Science Education (SIGCSE)},
 	date-added = {2023-02-11 18:17:42 -0600},
-	date-modified = {2023-02-28 00:21:58 -0600},
+	date-modified = {2023-04-25 18:53:14 -0500},
 	doi = {10.1145/3545945.3569728},
+	pages = {479--485},
 	title = {Using Context-Free Grammars to Scaffold and Automate Feedback in Precise Mathematical Writing},
 	url = {https://hdl.handle.net/2142/114361},
-	year = {2023, to appear},
+	year = {2023},
 	bdsk-url-1 = {https://hdl.handle.net/2142/114361},
 	bdsk-url-2 = {https://doi.org/10.1145/3545945.3569728}}
 
@@ -576,18 +577,18 @@ This chapter discusses, improving the academic performance of college students w
 	year = {2022},
 	bdsk-url-1 = {https://doi.org/10.1145/3478431.3499416}}
 
-@inproceedings{dhkr-at-20,
+@inproceedings{dhkrw-at-20,
 	abstract = {Computer science class enrollments have rapidly risen in the past decade. With current class sizes, standard approaches to grading and providing personalized feedback are no longer possible and new techniques become both feasible and necessary. In this paper, we present the third version of Automata Tutor, a tool for helping teachers and students in large courses on automata and formal languages. The second version of Automata Tutor supported automatic grading and feedback for finite-automata constructions and has already been used by thousands of users in dozens of countries. This new version of Automata Tutor supports automated grading and feedback generation for a greatly extended variety of new problems, including problems that ask students to create regular expressions, context-free grammars, pushdown automata and Turing machines corresponding to a given description, and problems about converting between equivalent models - e.g., from regular expressions to nondeterministic finite automata. Moreover, for several problems, this new version also enables teachers and students to automatically generate new problem instances. We also present the results of a survey run on a class of 950 students, which shows very positive results about the usability and usefulness of the tool.},
 	author = {D'Antoni, Loris and Helfrich, Martin and Kretinsky, Jan and Ramneantu, Emanuel and Weininger, Maximilian},
 	booktitle = {Proc. 32nd International Conference on Computer Aided Verification (CAV)},
 	date-added = {2023-02-11 17:38:02 -0600},
-	date-modified = {2023-02-26 12:44:01 -0600},
+	date-modified = {2023-04-26 15:30:28 -0500},
 	doi = {10.1007/978-3-030-53291-8_1},
 	number = {12225},
 	pages = {3--14},
 	publisher = {Springer},
 	series = {Lecture Notes in Computer Science},
-	title = {Automata Tutor v3},
+	title = {Automata {Tutor} v3},
 	year = {2020},
 	bdsk-url-1 = {https://doi.org/10.1007/978-3-030-53291-8_1}}
 
